--- a/index.html
+++ b/index.html
@@ -14,9 +14,10 @@
         <div class="main">
             <h1></h1>
             <span>Welcome</span>
-            <a href="game.html">Start Game</a>
+            <a href="https://ahmed-ebaid05.github.io/Guess-Game/game">Start Game</a>
             <footer>Made By Ahmed Ebaid</footer>
         </div>
         <script src="main.js"></script>
     </body>
+
 </html>
